[package]
name = "dcompose"
version = "0.1.0"
edition = "2024"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
license-file = "LICENSE.md"

[profile.release]
lto = "fat"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
regex = "1.11.1"
reqwest = "0.12.21"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "test-util"] }
yaml = "0.3.0"
